--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <title>Jorge Oliveira Santos</title>
-  <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <meta charset="UTF-8"/>
   <meta name="viewport"  content="width=device-width, initial-scale=1">
@@ -15,29 +15,18 @@
 <nav class="js-nav">
   <ul>
     <li class="active"><a href="index.html">Início</a></li>
-    <li><a href="downloads.html">Downloads</a></li>
-    <li><a href="informatica.html">Informática</a></li>
-    <li><a href="design.html">Design Gráfico</a></li>
+    <li><a href="Informatica/informatica.html">Informática</a></li>
     <li class="js-drop-button">
       <a>Programação ▼</a>
       <div class="js-drop-content">
-        <a href="programacao.html">Programação</a>
-        <a href="Programacao/Web Design/webdesign.html">Web Design</a>
-      </div>
-    </li>
-    <li class="js-drop-button">
-      <a>Cursos ▼</a>
-      <div class="js-drop-content">
-        <a href="cursos.html">Cursos</a>
-        <a>Informática</a>
-        <a>Design Gráfico</a>
-        <a>Desenvolvimento Web</a>
-        <a>Programação</a>
+        <a href="Web Design/webdesign.html">Web Design</a>
       </div>
     </li>
     <li class="right"><a href="sobre.html">Sobre</a></li>
   </ul>
 </nav>
+
+
 <div class="js-banner">
   <a id="banner1" href="sobre.html">Sobre
     <img style="width: 100%; height: auto; left: 0;" alt="Sobre" src="files/Jorge oliveira.webp"/>
