--- a/Informatica/informatica.html
+++ b/Informatica/informatica.html
@@ -3,13 +3,14 @@
 <head>
   <title>Informática</title>
   <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
   <meta charset="UTF-8"/>
   <!--SEO-->
   <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
   <meta name="description" content="Informática Básica e Avançada - Curso Completo">
   <meta name="keywords" content="informatica, curso, computador, computacao, windows, microsoft">
 </head>
-
+<menuBar></menuBar>
 <!-- #region Menu Lateral (Indice de tópicos) -->
 <div class="js-side">
   <p>Informática Básica e Avançada</p>
